update users api
